overflow problem fix

--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -85,6 +85,7 @@ main {
 
 .main {
     width: 100%;
+    overflow: hidden
 }
 
 .main-container {
